--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Richard Batty">
 
   
-  <meta name="description" content="I&rsquo;m a front-end developer aiming to help the world through a combination of software, design, and entrepreneurship. CV: CV Contact: &#114;&#106 &hellip;">
+  <meta name="description" content="I&rsquo;m a front-end developer aiming to help the world through a combination of software, design, and entrepreneurship. CV: CV Contact: &#114;&#x6a &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -63,7 +63,7 @@
 
 <p><strong>CV</strong>: <a href="/assets/pdfs/RichardBattyCV.pdf">CV</a></p>
 
-<p><strong>Contact</strong>: <a href="&#109;&#97;&#x69;&#108;&#116;&#x6f;&#x3a;&#x72;&#106;&#x6c;&#x62;&#97;&#116;&#116;&#x79;&#x40;&#x67;&#109;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#109;">&#114;&#106;&#x6c;&#x62;&#x61;&#116;&#x74;&#121;&#x40;&#x67;&#109;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;</a></p>
+<p><strong>Contact</strong>: <a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#111;&#x3a;&#x72;&#x6a;&#108;&#x62;&#x61;&#x74;&#116;&#x79;&#64;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#111;&#x6d;">&#114;&#x6a;&#x6c;&#98;&#x61;&#116;&#x74;&#x79;&#64;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#109;</a></p>
 
 
     </div>
