--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Richard Batty">
 
   
-  <meta name="description" content="I&rsquo;m a front-end developer aiming to help the world through a combination of software, design, and entrepreneurship. CV: CV Contact: &#114;&#x6a &hellip;">
+  <meta name="description" content="I&rsquo;m a front-end developer aiming to help the world through a combination of software, design, and entrepreneurship. CV: CV Contact: &#x72;&#106 &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -18,7 +18,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   
-  <link rel="canonical" href="http://richardbatty.com/about">
+  <link rel="canonical" href="http://richardbatty.github.io/about">
   <link href="/favicon.png" rel="icon">
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="/atom.xml" rel="alternate" title="Richard Batty" type="application/atom+xml">
@@ -63,7 +63,7 @@
 
 <p><strong>CV</strong>: <a href="/assets/pdfs/RichardBattyCV.pdf">CV</a></p>
 
-<p><strong>Contact</strong>: <a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#111;&#x3a;&#x72;&#x6a;&#108;&#x62;&#x61;&#x74;&#116;&#x79;&#64;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#111;&#x6d;">&#114;&#x6a;&#x6c;&#98;&#x61;&#116;&#x74;&#x79;&#64;&#x67;&#109;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#109;</a></p>
+<p><strong>Contact</strong>: <a href="&#109;&#97;&#x69;&#x6c;&#116;&#x6f;&#58;&#x72;&#x6a;&#108;&#98;&#97;&#x74;&#x74;&#x79;&#64;&#103;&#x6d;&#97;&#x69;&#x6c;&#x2e;&#x63;&#111;&#x6d;">&#x72;&#106;&#108;&#x62;&#97;&#116;&#x74;&#121;&#64;&#103;&#109;&#x61;&#x69;&#108;&#46;&#x63;&#111;&#109;</a></p>
 
 
     </div>
