--- a/public/about/index.html
+++ b/public/about/index.html
@@ -18,7 +18,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   
-  <link rel="canonical" href="http://richardbatty.com/about">
+  <link rel="canonical" href="http://richardbatty.github.io/about">
   <link href="/favicon.png" rel="icon">
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="/atom.xml" rel="alternate" title="Richard Batty" type="application/atom+xml">
@@ -63,7 +63,7 @@
 
 <p><strong>CV</strong>: <a href="/assets/pdfs/RichardBattyCV.pdf">CV</a></p>
 
-<p><strong>Contact</strong>: <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#111;&#x3a;&#x72;&#106;&#x6c;&#x62;&#x61;&#116;&#116;&#x79;&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;">&#x72;&#106;&#x6c;&#98;&#x61;&#116;&#x74;&#x79;&#64;&#103;&#x6d;&#97;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;</a></p>
+<p><strong>Contact</strong>: <a href="&#109;&#x61;&#105;&#x6c;&#116;&#111;&#58;&#x72;&#106;&#x6c;&#98;&#x61;&#116;&#116;&#121;&#x40;&#x67;&#x6d;&#97;&#x69;&#x6c;&#46;&#99;&#x6f;&#109;">&#x72;&#106;&#x6c;&#98;&#97;&#x74;&#116;&#121;&#x40;&#103;&#109;&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#109;</a></p>
 
 
     </div>
